--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@account-abstraction/contracts": "^0.5.0",
     "@openzeppelin/contracts": "^4.8.2",
+    "axios": "^1.3.4",
     "hardhat": "^2.13.0",
     "solidity-coverage": "^0.8.2"
   },
