--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = 'src'
 out = 'artifacts'
-libs = ['node_modules']
+libs = ["node_modules", "lib"]
 remappings = [
     '@account-abstraction/=node_modules/@account-abstraction/',
     '@ensdomains/=node_modules/@ensdomains/',
