--- a/foundry.toml
+++ b/foundry.toml
@@ -1,13 +1,10 @@
 [profile.default]
-src = 'src'
-out = 'artifacts'
-libs = ["node_modules", "lib"]
-remappings = [
-    '@account-abstraction/=node_modules/@account-abstraction/',
-    '@ensdomains/=node_modules/@ensdomains/',
-    '@ethereum-waffle/=node_modules/@ethereum-waffle/',
-    '@openzeppelin/=node_modules/@openzeppelin/',
-    'hardhat/=node_modules/hardhat/',
-]
-
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+src = 'contracts'
+out = 'out'
+libs = ['node_modules', 'lib']
+test = 'test'
+#cache_path  = 'cache_forge'
+solc = "0.8.18"
+optimizer = true
+optimizer_runs = 1000000
+via_ir = true
