--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "solidity-coverage": "^0.8.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-foundry": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@typechain/ethers-v5": "^10.2.0",
