--- a/foundry.toml
+++ b/foundry.toml
@@ -1,10 +1,9 @@
 [profile.default]
-src = 'contracts'
+src = 'src'
 out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
 #cache_path  = 'cache_forge'
-solc = "0.8.18"
+solc = "0.8.19"
 optimizer = true
 optimizer_runs = 1000000
-via_ir = true
