--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "outDir": "dist",
     "target": "es2020",
     "module": "commonjs",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "rootDir": "sdk"
   },
   "include": [
     "sdk"
