--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "@pimlico/erc20-paymaster",
-  "version": "0.0.12",
+  "version": "0.1.0",
   "license": "GPL-3.0-or-later",
   "description": "A permissionless ERC20 Paymaster implementation by Pimlico",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
-  "typings": "./dist/types/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist && pnpm hardhat clean",
-    "build": "pnpm run clean && pnpm hardhat compile && pnpm run build:cjs && pnpm run build:esm && pnpm run build:types",
-    "build:cjs": "tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs --removeComments --verbatimModuleSyntax false && echo > ./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
-    "build:esm": "tsc --project tsconfig.json --module es2020 --outDir ./dist/esm --removeComments && echo > ./dist/esm/package.json '{\"type\":\"module\"}'",
-    "build:types": "tsc --project tsconfig.json --module esnext --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap"
+    "build": "pnpm run clean && pnpm hardhat compile && pnpm tsup"
+  },
+  "tsup": {
+    "entry": ["sdk/index.ts"],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true,
+    "dts": true,
+    "format": ["cjs", "esm"]
   },
   "dependencies": {
     "@account-abstraction/contracts": "^0.6.0",
@@ -22,7 +27,8 @@
     "@ethersproject/providers": "^5.7.2",
     "@openzeppelin/contracts": "^4.8.2",
     "ethers": "^5.7.2",
-    "solady": "^0.0.90"
+    "solady": "^0.0.90",
+    "tsup": "^7.1.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-foundry": "^1.0.0",
@@ -50,21 +56,9 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "default": "./dist/cjs/index.js"
-    },
-    "./contracts": {
-      "types": "./dist/types/typechain/index.d.ts",
-      "import": "./dist/esm/typechain/index.js",
-      "default": "./dist/cjs/typechain/index.js"
-    }
-  },
-  "typesVersions": {
-    "*": {
-      "contracts": [
-        "./dist/types/typechain/index.d.ts"
-      ]
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.js"
     }
   }
 }
