--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es2020",
-    "module": "commonjs",
+    "target": "ES2021",
+    "module": "CommonJS",
     "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
-    "rootDir": "sdk"
+    "rootDir": "sdk",
+    "lib": [
+      "ES2021"
+    ],
   },
   "include": [
     "sdk"
