--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "solidity.compileUsingRemoteVersion": "v0.8.23+commit.f704f362"
+    "solidity.compileUsingRemoteVersion": "v0.8.23+commit.f704f362",
+    "coverage-gutters.coverageFileNames": [
+        "lcov.info"
+    ]
 }
