--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,8 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
 #cache_path  = 'cache_forge'
-solc = "0.8.19"
+solc = "0.8.23"
 optimizer = true
 optimizer_runs = 1000000
 gas_price = 1000000000
+ast = true
