--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/v3-core"]
 	path = lib/v3-core
 	url = https://github.com/Uniswap/v3-core
+[submodule "lib/account-abstraction-v6"]
+	path = lib/account-abstraction-v6
+	url = https://github.com/eth-infinitism/account-abstraction
