--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,24 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "lib/openzeppelin-contracts"]
-	path = lib/openzeppelin-contracts
-	url = https://github.com/openzeppelin/openzeppelin-contracts
-[submodule "lib/account-abstraction"]
-	path = lib/account-abstraction
-	url = https://github.com/eth-infinitism/account-abstraction
 [submodule "lib/halmos-cheatcodes"]
 	path = lib/halmos-cheatcodes
 	url = https://github.com/a16z/halmos-cheatcodes
+[submodule "lib/v3-periphery"]
+	path = lib/v3-periphery
+	url = https://github.com/Uniswap/v3-periphery
+[submodule "lib/v3-core"]
+	path = lib/v3-core
+	url = https://github.com/Uniswap/v3-core
+[submodule "lib/account-abstraction-v7"]
+	path = lib/account-abstraction-v7
+	url = https://github.com/eth-infinitism/account-abstraction
+[submodule "lib/account-abstraction-v6"]
+	path = lib/account-abstraction-v6
+	url = https://github.com/eth-infinitism/account-abstraction
+[submodule "lib/openzeppelin-contracts-v5.0.0"]
+	path = lib/openzeppelin-contracts-v5.0.0
+	url = https://github.com/openZeppelin/openzeppelin-contracts
+[submodule "lib/openzeppelin-contracts-v4.8.0"]
+	path = lib/openzeppelin-contracts-v4.8.0
+	url = https://github.com/openZeppelin/openzeppelin-contracts
